name:                helm-website-examples
version:             0.1.0
-- synopsis:
description:         Source code of tutorials from the Helm website <http://helm-engine.org/>
homepage:            https://github.com/AugmentedFifth/helm-website-examples
license:             MIT
license-file:        LICENSE
author:              AugmentedFifth
maintainer:          zcomito@gmail.com
copyright:           2017 AugmentedFifth
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Colors
                     , Gradients
                     , CurvesAndAnimation
  build-depends:       base >= 4.7 && < 5
                     , linear
                     , helm
  default-language:    Haskell2010

executable helm-website-examples-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , helm-website-examples
  default-language:    Haskell2010

test-suite helm-website-examples-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , helm-website-examples
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/AugmentedFifth/helm-website-examples
